fixed footer and sticky page and aligned tootip colors to winwall branding colours

--- a/src/pages/WinWallPage.css
+++ b/src/pages/WinWallPage.css
@@ -1,9 +1,7 @@
-body {
-    display: flex;
-}
 
-.main-section {
-    margin:50px;
+.profile-image{
+    border-radius: 180px;
+    padding: 3rem;
 }
 
 .main-section--description {
@@ -14,7 +12,7 @@ body {
 .sticky-section{
     display: flex;
     align-content: center;
-    width: 100em;
+    
 }
 
   .sticky-board {
@@ -25,6 +23,8 @@ body {
     justify-content: flex-start;
     gap: 15px;
     width: 100%;
+    cursor: pointer;
+
 }
 
 
@@ -46,4 +46,25 @@ textarea {
     align-self: flex-end;
     background-color: transparent;
 
+}
+
+h3.title-sticky  {
+    color: var(--primary);
+    font-size: 2rem;
+    margin: 10px;
+    padding: 2rem;
+}
+
+.win-wall-title-section {
+    color: var(--primary);
+    padding: 3rem;
+    margin-bottom: 100px;
+}
+
+.ww-title {
+    margin-bottom: 2rem;
+    background-color: var(--secondary);
+    text-decoration: underline;
+    /* font-family: var(--highlight-text); */
+    font-size: 50px;
 }
